# rust-rcli

./: Cargo.toml  cliff.toml  deny.toml
src/: main.rs
